# advent-of-code

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: node.js.yml
2019/day1/: 1.js
2020/day1/: 1.js
2020/day2/: 2.js
2020/day3/: 3.js
2020/day4/: 4.js
2020/day5/: 5.js
2020/day6/: 6.js
2020/day7/: 7.js
2020/day8/: 8.js
etc/2021/: day1-awk.sh  day1.fish  day2-awk.sh
etc/util/import/: README.md  import.js  package.json
hs/: .gitignore  default.nix
hs/2019/: 1.hs
hs/2022/: 1.hs  6.hs
import/: README.md  config.json  import.js  package.json
js-ts/: lib.ts  package.json  pnpm-lock.yaml  runner.ts  tsconfig.json
js-ts/2019/: day2.ts
js-ts/2020/day1/: 1.js
js-ts/2020/day2/: 2.js
js-ts/2020/day3/: 3.js
js-ts/2020/day4/: 4.js
js-ts/2020/day5/: 5.js
js-ts/2020/day6/: 6.js
js-ts/2020/day7/: 7.js
js-ts/2020/day8/: 8.js
js-ts/2021/day1/: 1.ts
js-ts/2021/day2/: 2.ts
js-ts/2021/day3/: 3.ts
js-ts/2021/day4/: 4.ts
js-ts/2021/day5/: 5.ts
js-ts/2021/day6/: 6.ts
js-ts/2022/: day1.ts
past events and other tests/: README.md
printer/: .env.example  .gitignore  Cargo.toml  README.md
printer/src/: main.rs  pastebin.rs  qr.rs
rust/: Cargo.toml
rust/2021/: Cargo.toml
rust/2021/day1/: Cargo.toml
rust/2021/day10/: Cargo.toml
rust/2021/day11/: Cargo.toml
rust/2021/day16/: Cargo.toml
rust/2021/day6/: Cargo.toml
rust/2022/: Cargo.toml
rust/2023/: Cargo.toml
rust/2024/: .gitignore  Cargo.toml
uiua/: 2022-1.ua
util/import/: config.json  package-lock.json  package.json
(+57 files in other folders)
