[package]
name = "printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
dotenvy = "0.15.6"
fast_qr = { version = "0.6.1", features = ["image"] }
image = "0.24.5"
notify = "5.0.0"
rqrr = "0.5.2"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
ureq = { version = "2.5.0", features = ["json"] }
